--- a/contrib/Dockerfile
+++ b/contrib/Dockerfile
@@ -6,8 +6,12 @@ RUN apt-get update && apt-get install -y \
     zip \
     git \
     curl \
-    && docker-php-ext-install pdo pdo_mysql mysqli zip \
-    && docker-php-ext-enable pdo pdo_mysql mysqli
+    libfreetype6-dev \
+    libjpeg62-turbo-dev \
+    libpng-dev \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install pdo pdo_mysql mysqli zip gd \
+    && docker-php-ext-enable pdo pdo_mysql mysqli gd
 
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
