--- a/contrib/nginx.conf
+++ b/contrib/nginx.conf
@@ -5,6 +5,10 @@ server {
     root /var/www/web;
     index index.php index.html;
 
+    set_real_ip_from 172.17.0.0/16; #default Docker bridge
+    real_ip_header X-Forwarded-For;
+    real_ip_recursive on;
+
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
@@ -13,11 +17,21 @@ server {
         include fastcgi_params;
         fastcgi_pass php:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+
+        fastcgi_param HTTP_X_REAL_IP $remote_addr;
+        fastcgi_param HTTP_X_FORWARDED_FOR $proxy_add_x_forwarded_for;
+        fastcgi_param HTTP_X_FORWARDED_PROTO $scheme;
     }
 
     location ~* \.(jpg|jpeg|png|gif|css|js|ico|woff|woff2|ttf|svg|eot)$ {
         expires max;
         log_not_found off;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    # Защита от доступа к конфиденциальным файлам
+    location ~ /\.(ht|git|env|composer|docker) {
+        deny all;
     }
 }
